--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "chee <chee@snaek.org> (https://snaek.org/)",
   "license": "ISC",
   "dependencies": {
+    "crypto-browserify": "^3.11.0",
+    "crypto-js": "^3.1.6",
     "dotenv": "^2.0.0",
     "sqlite3": "^3.1.4"
   }
